Updates to observable view and view menu.